--- a/PotatoUtils.GhostArchiver.App/Mainform.resx
+++ b/PotatoUtils.GhostArchiver.App/Mainform.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAACxIeAAsSHgQLEh4GCxIeBgsSHgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsS
+        HgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsS
+        HgQMEh0AAAAAAAsSHgALEh5WCx0r5gsmN/kLJjf5Cxck+QwgK/kNKzf5DSs3+Q0rN/kNKzf5DSs3+Q0r
+        N/kNKzf5DSs3+Q0rN/kNKzf5DSs3+Q0rN/kNKzf5DSs3+Q0rN/kNKzf5DSs3+Q0rN/kNKzf5DSs3+Q0r
+        N/kNKzf5DCEs6AsSHlsMEh8ACxIeBAsdK+YCquL/ALv4/wG59v8LRV3/KMPl/y3Y/P8t2Pz/Ldj8/y3Y
+        /P8t2Pz/Ldj8/y3Y/P8t2Pz/Ldj8/y3Y/P8t2Pz/Ldj8/y3Y/P8t2Pz/Ldj8/y3Y/P8t2Pz/Ldj8/y3Y
+        /P8t2Pz/Ldj8/y3Y/P8ow+X/DCAs6AsSHgQLEh4GCyY3+QC7+P8MQFn/KzZB/w4rN/8t2Pz/KcXn/yGg
+        vf8hoL3/IaC9/yGgvf8hoL3/IaC9/yGgvf8hoL3/IaC9/yKoxf8t2f7/Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3Y/P8NKzf5CxIeBgsSHgYLJjf5ALv4/ys3Qv/n3tD/LDpC/y3Y
+        /P8hoL3/ioiH/7y6t/+8urf/vLq3/7y6t/+8urf/vLq3/7y6t/+6uLX/IzU//y3Y/P8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldj8/w0rN/kLEh4GCxIeBgsmN/kAu/j/LDdC/+rh
+        0v8sO0L/Ldj8/yGgvf+KiIf/vLq3/7y6t/+8urf/vLq3/7y6t/+8urf/vLq3/7q4tf8jNT//Ldj8/y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2Pz/DSs3+QsSHgYLEh4GCyY3+QC7
+        +P8sN0L/6uHS/yw7Qv8t2Pz/KMXn/yGgvf8hoL3/IaC9/yGgvf8hoL3/IaC9/yGgvf8hoL3/IaC9/yKo
+        xf8t2f7/Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3Y/P8NKzf5CxIeBgsS
+        HgYLJjf5ALv4/yw3Qv/q4dL/LDtC/y3Y/P8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldj8/w0r
+        N/kLEh4GCxIeBgsmN/kAu/j/LDdC/+rh0v8sO0L/Ldj8/y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2Pz/DSs3+QsSHgYLEh4GCyY3+QC7+P8sN0L/6uHS/yw7Qv8t2Pz/Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3Y/P8NKzf5CxIeBgsSHgYLJjf5ALv4/yw3Qv/q4dL/LDtC/y3Y/P8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldj8/w0rN/kLEh4GCxIeBgsmN/kAu/j/LDdC/+rh0/9LYGj/Ldj9/y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2Pz/DSs3+QsSHgYLEh4GCyY3+QC7+P8sN0L/7OPV/7Dd
+        6f8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3Y/P8NKzf5CxIeBgsSHgYLJjf5ALv4/yw3
+        Qv/r4tP/X3mC/y3Z/f8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldj8/w0rN/kLEh4GCxIeBgsm
+        N/kAu/j/LDdC/+zj1f+w3en/Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2Pz/DSs3+QsS
+        HgYLEh4GCyY3+QC7+P8sN0L/6uHT/0tgaP8t2P3/Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldn+/yKoxv8hoL3/IaC9/yGgvf8hoL3/IaC9/yGgvf8hoL3/KcXn/y3Y
+        /P8NKzf5CxIeBgsSHgYLJjf5ALv4/yw3Qv/q4dL/LDtC/y3Y/P8t2v//Ldr//y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2f7/IqjF/yGgvf8hoL3/IaC9/yGgvf8hoL3/IaC9/yGg
+        vf8pxef/Ldj8/w0rN/kLEh4GCxIeBgsmN/kAu/j/LDdC/+rh0v8sO0L/Ldj8/y3a//8t2v//Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//ynF5/8hoL3/IaC9/yGg
+        vf8hoL3/IaC9/ynF5/8t2Pz/DSs3+QsSHgYLEh4GCyY3+QC7+P8sN0L/6uHS/yw7Qv8t2Pz/Ldr//y3a
+        //8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//KMXn/yGg
+        vf8hoL3/IaC9/yGgvf8hoL3/KcXn/y3Y/P8NKzf5CxIeBgsSHgYLJjf5ALv4/yw3Qv/q4dL/LDtC/y3Y
+        /P8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2f7/LNf7/yzX+/8s1/v/LNf7/yzX
+        +/8s1/v/LNf7/yzX+/8s1/v/LNf7/yzX+/8s1/v/LNT5/w0qN/kLEh4GCxIeBgsmN/kAu/j/LDdC/+rh
+        0v8sO0L/Ldj8/y3a//8t2v//Ldr//y3a//8t2v//Ldr//y3a//8t2v//K8/z/xtvhP8vPUX/MD1F/zA9
+        Rf8wPUX/MD1F/zA9Rf8wPUX/MD1F/zA9Rf8wPUX/IzQ+/wwwPv8MNEX/CxQg+QsSHgYLEh4GCyY3+QC7
+        +P8sN0L/6uHS/yw7Qv8t2Pz/Ldr//y3a//8t2v//Ldr//y3a//8t2v//Ldr//yrM7/8fYHL/u7m2//z5
+        9P/8+fT//Pn0//z59P/8+fT//Pn0//z59P/8+fT//Pn0//z59P+6uLX/Bou5/wC7+P8LJjb5CxIeBgsS
+        HgYLJjf5ALv4/yw3Qv/q4dL/LDtC/y3Y/P8t2v//Ldr//y3a//8t2v//Ldr//y3a//8pyez/JVpq/8TC
+        vv///Pf//vv2/8XDv/+8urf/vLq3/7y6t/+8urf/vLq3/7y6t/+8urf/5+Tg/7y6t/8GjLv/AL36/wsm
+        N/kLEh4GCxIeBAsdLOgCqeD/LDdB/+ri0/9MTk//KMXn/y3Y/P8t2Pz/Ldj8/y3Y/P8t2Pz/KMTm/yxV
+        ZP/Lycb///z3///89//++/b/xcO//7y6t/+8urf/vLq3/7y6t/+8urf/vLq3/7y6t//n5OD/vLq3/waL
+        uf8BtvL/CyIy9QsSHgYMEh0ACxIeWgsdK+gsLTH/7OPV/8K7r/9CRkj/IzU//zA+Rv8wPkb/MD5G/zA+
+        Rv9PU1b/09HN///89//n5OD/vLq3/7y6t/+8urf/vLq3/7y6t/+8urf/vLq3/7y6t/+8urf/vLq3/+fk
+        4P+8urf/Cx0s/AsiMvULEh6KCxIeAQAAAAAMEh8ACxIeCiwtMfns49X/7+bX/6+onv+6uLX//Pn0//z5
+        9P/8+fT//Pn0//369f///Pf///z3/+fk4P+8urf/vLq3/7y6t/+8urf/vLq3/7y6t/+8urf/vLq3/7y6
+        t/+8urf/5+Tg/7y6t/8LEh6DCxIeBgsSHgEAAAAAAAAAAAAAAAALEh4GLC0x+ezj1f/v5tf/sKmf/7q4
+        tf/8+fT//Pn0//z59P/8+fT//Pn0//z59P/8+fT//Pn0//z59P/8+fT//Pn0//z59P/8+fT//Pn0//z5
+        9P/8+fT//Pn0//z59P/8+fT/uri1/wsSHn8AAAAAAAAAAAAAAAAAAAAAAAAAAAsSHgYsLTH57OPV/+/m
+        1/+4sab/Nzc6/z8/Qf8/P0H/Pz9B/z8/Qf8/P0H/Pz9B/z8/Qf8/P0H/Pz9B/z8/Qf8/P0H/Pz9B/z8/
+        Qf8/P0H/Pz9B/z8/Qf8wMTb/MDE2+TAxNvkiJSz5CxIecAAAAAAAAAAAAAAAAAAAAAAAAAAACxIeBiwt
+        Mfns49X/7+bX/+7l1v/s49X/7OPV/+zj1f/s49X/7OPV/+zj1f/s49X/7OPV/+zj1f/s49X/7OPV/+zj
+        1f/s49X/7OPV/+zj1f/s49X/6uHS/ywtMPkLEh4NCxIeBgsSHgYLEh4CAAAAAAAAAAAAAAAAAAAAAAAA
+        AAALEh4GLC0w+erh0v/s49X/7OPV/+zj1f/s49X/7OPV/+zj1f/s49X/7OPV/+zj1f/s49X/7OPV/+zj
+        1f/s49X/7OPV/+zj1f/s49X/7OPV/+zj1f/q4dL/LC0w+QsSHgYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAsSHgUNEx/nLC0w+SwtMfksLTH5LC0x+SwtMfksLTH5LC0x+SwtMfksLTH5LC0x+Swt
+        MfksLTH5LC0x+SwtMfksLTH5LC0x+SwtMfksLTH5LC0x+SwtMPkNEx/nCxIeBQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAACxIeAAsSHgULEh4GCxIeBgsSHgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsS
+        HgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsSHgYLEh4GCxIeBgsSHgULEh4AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAwAAAA4AAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAMAA
+        AAHAAAAHwAAAB8AAAAfAAAA/wAAAP+AAAH8=
+</value>
+  </data>
 </root>
